# sketch_bot_support

./: CMakeLists.txt  package.xml  readme.MD
launch/: view_robot.launch.py
meshes/collision/: base_elevation.stl  eoat.stl  link_1.stl  link_2.stl  link_4.stl
meshes/visual/: link_1.stl  link_2.stl  link_3.stl  link_4.stl
rviz/: view_robot.rviz
urdf/: sketch_bot.urdf  sketch_bot.xacro  sketch_bot_macro.xacro
