<?xml version="1.0"?>
<package format="3">
  <name>sketch_bot_support</name>
  <version>1.0.0</version>
  <description>Support package for the sketch_bot, includes URDFs, meshes, and joint names</description>
  <maintainer email="demola.oris@gmail.com">AdemolaOridate</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>